[project]
name = "bfia"
version = "0.1.0"
description = "Bharat Financial Intelligence Agent - ETL Pipeline"
authors = [{ name = "Vivek Shinde", email = "vivek.651.2304@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pypdf>=3.17.0",
    "unstructured[pdf]==0.23.1",
    "camelot-py[cv]>=0.11.0",
    "tabula-py>=2.9.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "opencv-python-headless>=4.8.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.9.0",
    "supabase>=2.0.0",
    "redis>=5.0.0",
    "neo4j>=5.14.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "fastembed>=0.2.0",        # for sparse embeddings
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]